--- a/hide_starts_with.info.yml
+++ b/hide_starts_with.info.yml
@@ -1,5 +1,5 @@
-name: Facet API Hide starts with
+name: Facets Hide starts with
 type: module
-description: A Facet API processor that hides all results that start with a configurable character.
+description: A Facets processor that hides all results that start with a configurable character.
 core: 8.x
 package: Demo
